# auav_f22

./: .dockerignore  .gititnore  .gitmodules  README.md  docker-compose.yml  nocpu.diff  px4  sim
dockerfiles/: gcs  onboard  px4  sim
gcs/: Dockerfile
grader/: Dockerfile
grader/ws/: .gitignore
grader/ws/src/auav_f22_grader/: CMakeLists.txt  package.xml
grader/ws/src/auav_f22_grader/scripts/: RoverControl.ipynb  referee.py
onboard/: Dockerfile
onboard/ws/src/auav_f22/: CMakeLists.txt  package.xml
onboard/ws/src/auav_f22/launch/: sample.launch.py
onboard/ws/src/auav_f22/scripts/: offboard.py
onboard/ws/src/auav_f22/src/: offboard_control.cpp
px4/: Dockerfile  README.md
px4_scripts/: px4_build.sh  px4_start.sh
sim/: Dockerfile
sim/install/: base.sh  extra.sh  gazebo.sh  ros.sh
sim/ws/: test.sdf
sim/ws/src/auav_f22_gazebo/: CMakeLists.txt  package.xml
sim/ws/src/auav_f22_gazebo/launch/: sample.launch.py
sim/ws/src/auav_f22_gazebo/models/axial_scx10/: axial_scx10.sdf  axial_scx10.sdf.jinja
sim/ws/src/auav_f22_gazebo/models/everblock_black/: model.sdf
sim/ws/src/auav_f22_gazebo/models/everblock_black/meshes/: everblock_black.dae
sim/ws/src/auav_f22_gazebo/models/everblock_blue/: model.sdf
sim/ws/src/auav_f22_gazebo/models/everblock_blue/meshes/: everblock_blue.dae
sim/ws/src/auav_f22_gazebo/models/everblock_green/: model.sdf
sim/ws/src/auav_f22_gazebo/models/everblock_green/meshes/: everblock_green.dae
sim/ws/src/auav_f22_gazebo/models/everblock_grey/: model.sdf
sim/ws/src/auav_f22_gazebo/models/everblock_grey/meshes/: everblock_grey.blend  everblock_grey.dae
sim/ws/src/auav_f22_gazebo/models/everblock_red/: model.sdf
sim/ws/src/auav_f22_gazebo/models/everblock_red/meshes/: everblock_red.dae
sim/ws/src/auav_f22_gazebo/models/everblock_white/: model.sdf
sim/ws/src/auav_f22_gazebo/models/everblock_white/meshes/: everblock_white.dae
sim/ws/src/auav_f22_gazebo/models/everblock_yellow/: model.sdf
sim/ws/src/auav_f22_gazebo/models/everblock_yellow/meshes/: everblock_yellow.blend  everblock_yellow.dae
sim/ws/src/auav_f22_gazebo/models/freenove_4wd/: freenove_4wd.sdf.jinja
sim/ws/src/auav_f22_gazebo/models/hangar_floor/: hangar_floor.sdf
sim/ws/src/auav_f22_gazebo/models/hangar_floor/meshes/: hangar_floor.blend  hangar_floor.blend1  hangar_floor.dae
sim/ws/src/auav_f22_gazebo/models/px4vision/: px4vision.sdf.jinja
sim/ws/src/auav_f22_gazebo/models/red_ball/: red_ball.sdf
sim/ws/src/auav_f22_gazebo/models/sample_course_1/: sample_course_1.sdf.jinja
sim/ws/src/auav_f22_gazebo/rviz/: drone.rviz
sim/ws/src/auav_f22_gazebo/worlds/: trial_1.world.jinja
sim/ws/src/auav_f22_sim/: CMakeLists.txt  package.xml
sim/ws/src/auav_f22_sim/launch/: sample.launch.py
